--- a/.github/workflows/flutter-workflow.yml
+++ b/.github/workflows/flutter-workflow.yml
@@ -18,8 +18,7 @@ jobs:
         with:
           channel: 'beta'
       - run: flutter pub get
-      - run: flutter format --set-exit-if-changed .
-      - run: flutter analyze .
+      - run: flutter test
       - run: flutter build apk --release --split-per-abi
 
       - name: Push to Releases
