--- a/.github/workflows/flutter-workflow.yml
+++ b/.github/workflows/flutter-workflow.yml
@@ -83,58 +83,10 @@ jobs:
           name: macos-build
           path: build/macos/Build/Products/Release/*.app
 
-  build-linux:
-    name: Build and Release Linux
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v1
-        with:
-          channel: 'stable'
-      
-      - name: Get Flutter Dependencies
-        run: flutter pub get
-
-      - name: Build Linux
-        run: flutter build linux --release
-
-      - name: Upload Linux Build
-        if: success()
-        uses: actions/upload-artifact@v2
-        with:
-          name: linux-build
-          path: build/linux/Build/Products/Release/*
-
-  build-web:
-    name: Build and Release Flutter Web
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v1
-        with:
-          channel: 'stable'
-      
-      - name: Get Flutter Dependencies
-        run: flutter pub get
-
-      - name: Build Flutter Web
-        run: flutter build web --release
-
-      - name: Upload Flutter Web Build
-        if: success()
-        uses: actions/upload-artifact@v2
-        with:
-          name: flutter-web-build
-          path: build/web
-
   release:
     name: Create Release
     runs-on: ubuntu-latest
-    needs: [build-android, build-ios, build-macos, build-linux, build-web]
+    needs: [build-android, build-ios, build-macos]
     steps:
       - uses: actions/checkout@v1
 
@@ -154,16 +106,6 @@ jobs:
           name: macos-build
           path: ./artifacts/macos
 
-      - uses: actions/download-artifact@v2
-        with:
-          name: linux-build
-          path: ./artifacts/linux
-
-      - uses: actions/download-artifact@v2
-        with:
-          name: flutter-web-build
-          path: ./artifacts/web
-
       - name: Create Release
         uses: ncipollo/release-action@v1
         with:
@@ -171,7 +113,5 @@ jobs:
             ./artifacts/android/*
             ./artifacts/ios/*
             ./artifacts/macos/*
-            ./artifacts/linux/*
-            ./artifacts/web/*
           tag: v1.0.${{ github.run_number }}
           token: ${{ secrets.GITHUB_TOKEN }}
