--- a/.github/workflows/flutter-workflow.yml
+++ b/.github/workflows/flutter-workflow.yml
@@ -10,21 +10,46 @@ on:
       - develop
 name: "Build & Release"
 jobs:
-  build:
-    name: Build & Release
-    runs-on: macos-latest
+  build-android:
+    name: Build and Release APK
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - uses: actions/checkout@v1
+
+      - name: Setup Java
+        uses: actions/setup-java@v1
         with:
-          distribution: 'zulu'
-          java-version: '12'
-      - uses: subosito/flutter-action@v2
+          java-version: '12.x'
+      
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v1
         with:
           channel: 'stable'
-          architecture: x64
+      
+      - name: Get Flutter Dependencies
+        run: flutter pub get
+      
+      - name: Build APK
+        run: flutter build apk --release --split-per-abi
 
-      - run: flutter build apk --release --split-per-abi
+      - name: Upload APK
+        if: success()
+        uses: actions/upload-artifact@v2
+        with:
+          name: android-apk
+          path: build/app/outputs/apk/release/*.apk
+
+  build-ios:
+    name: Build and Release iOS
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v1
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v1
+        with:
+          channel: 'stable'
+      
       - run: |
           flutter build ios --no-codesign
           cd build/ios/iphoneos
@@ -39,4 +64,3 @@ jobs:
           artifacts: "build/app/outputs/apk/release/*,build/ios/iphoneos/app.ipa"
           tag: v1.0.${{ github.run_number }}
           token: ${{ secrets.GITHUB_TOKEN }}
-
