--- a/.github/workflows/flutter-workflow.yml
+++ b/.github/workflows/flutter-workflow.yml
@@ -1,14 +1,10 @@
+name: Flutter CI
+
 on:
-  pull_request:
-    branches:
-      - main
-      - master
   push:
     branches:
-      - main
       - master
-      - develop
-name: "Build & Release"
+
 jobs:
   build-android:
     name: Build and Release APK
@@ -50,19 +46,43 @@ jobs:
         with:
           channel: 'stable'
       
-      - run: |
-          flutter build ios --no-codesign
-          cd build/ios/iphoneos
-          mkdir Payload
-          cd Payload
-          ln -s ../Runner.app
-          cd ..
-          zip -r app.ipa Payload
-      - name: Push to Releases
+      - name: Get Flutter Dependencies
+        run: flutter pub get
+
+      - name: Build iOS
+        run: flutter build ios --release --no-codesign
+
+      - name: Upload iOS Build
+        if: success()
+        uses: actions/upload-artifact@v2
+        with:
+          name: ios-build
+          path: build/ios/iphoneos/app.ipa
+          # path: build/ios/iphoneos/Runner.app
+
+  release:
+    name: Create Release
+    runs-on: ubuntu-latest
+    needs: [build-android, build-ios, build-macos]
+    steps:
+      - uses: actions/checkout@v1
+
+      - name: Download Artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: android-apk
+          path: ./artifacts/android
+
+      - uses: actions/download-artifact@v2
+        with:
+          name: ios-build
+          path: ./artifacts/ios
+
+      - name: Create Release
         uses: ncipollo/release-action@v1
         with:
-        artifacts: |
+          artifacts: |
             ./artifacts/android/*
-            "build/ios/iphoneos/app.ipa"
+            ./artifacts/ios/*
           tag: v1.0.${{ github.run_number }}
           token: ${{ secrets.GITHUB_TOKEN }}
