--- a/.github/workflows/flutter-workflow.yml
+++ b/.github/workflows/flutter-workflow.yml
@@ -1,43 +1,68 @@
+name: Build and Release
+
 on:
-  pull_request:
-    branches:
-      - main
-      - master
   push:
     branches:
       - main
-      - master
-      - develop
-name: "Build & Release"
-jobs:
-  build:
-    name: Build and Release APK
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
 
-      - name: Setup Java
-        uses: actions/setup-java@v1
-        with:
-          java-version: '12.x'
-      
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v1
-        with:
-          channel: 'stable'
-          
-      - run: flutter build apk --release --split-per-abi
-      - run: |
-          flutter build ios --no-codesign
-          cd build/ios/iphoneos
-          mkdir Payload
-          cd Payload
-          ln -s ../Runner.app
-          cd ..
-          zip -r app.ipa Payload
-      - name: Push to Releases
-        uses: ncipollo/release-action@v1
-        with:
-          artifacts: "build/app/outputs/apk/release/*.apk,build/ios/iphoneos/app.ipa"
-          tag: v1.0.${{ github.run_number }}
-          token: ${{ secrets.TOKEN }}
+jobs:
+  build_android:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Check out code
+      uses: actions/checkout@v2
+
+    - name: Setup Flutter
+      uses: subosito/flutter-action@v2
+      with:
+        flutter-version: '2.x'
+
+    - name: Install dependencies
+      run: flutter pub get
+
+    - name: Build APK
+      run: flutter build apk --release
+
+    - name: Upload APK
+      uses: actions/upload-artifact@v2
+      with:
+        name: app-release
+        path: build/app/outputs/flutter-apk/app-release.apk
+
+  build_ios:
+    runs-on: macos-latest
+    steps:
+    - name: Check out code
+      uses: actions/checkout@v2
+
+    - name: Setup Flutter
+      uses: subosito/flutter-action@v2
+      with:
+        flutter-version: '2.x'
+
+    - name: Install dependencies
+      run: flutter pub get
+
+    - name: Build iOS
+      run: flutter build ios --release --no-codesign
+
+    - name: Install Apple certificate and provisioning profile
+      uses: mmarket/apple-certificate-installer@v1
+      with:
+        developer-username: ${{ secrets.APPLE_DEVELOPER_USERNAME }}
+        developer-password: ${{ secrets.APPLE_DEVELOPER_PASSWORD }}
+        certificate-base64: ${{ secrets.APPLE_CERTIFICATE_BASE64 }}
+        provisioning-profile-base64: ${{ secrets.APPLE_PROVISIONING_PROFILE_BASE64 }}
+
+    - name: Archive iOS
+      run: flutter build ios --release --no-codesign
+
+    - name: Export IPA
+      run: flutter build ipa --release
+
+    - name: Upload IPA
+      uses: actions/upload-artifact@v2
+      with:
+        name: app-release
+        path: build/ios/archive/Runner.ipa
