--- a/.github/workflows/flutter-workflow.yml
+++ b/.github/workflows/flutter-workflow.yml
@@ -1,5 +1,3 @@
-name: "Build & Release"
-
 on:
   pull_request:
     branches:
@@ -10,13 +8,13 @@ on:
       - main
       - master
       - develop
-
+name: "Build & Release"
 jobs:
   build-android:
     name: Build and Release APK
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v1
 
       - name: Setup Java
         uses: actions/setup-java@v1
@@ -24,9 +22,9 @@ jobs:
           java-version: '12.x'
       
       - name: Setup Flutter
-        uses: subosito/flutter-action@v2
+        uses: subosito/flutter-action@v1
         with:
-          flutter-version: '2.x'
+          channel: 'stable'
       
       - name: Get Flutter Dependencies
         run: flutter pub get
@@ -35,6 +33,7 @@ jobs:
         run: flutter build apk --release --split-per-abi
 
       - name: Upload APK
+        if: success()
         uses: actions/upload-artifact@v2
         with:
           name: android-apk
@@ -44,78 +43,23 @@ jobs:
     name: Build and Release iOS
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v1
 
       - name: Setup Flutter
-        uses: subosito/flutter-action@v2
+        uses: subosito/flutter-action@v1
         with:
-          flutter-version: '2.x'
-      
-      - name: Get Flutter Dependencies
-        run: flutter pub get
-
-      - name: Build iOS
-        run: flutter build ios --release --no-codesign
-      
+          channel: 'stable'
       - run: |
+          flutter build ios --no-codesign
           cd build/ios/iphoneos
           mkdir Payload
-          cp -r Runner.app Payload/
+          cd Payload
+          ln -s ../Runner.app
+          cd ..
           zip -r app.ipa Payload
-
-      - name: Upload IPA
-        uses: actions/upload-artifact@v2
-        with:
-          name: ios-ipa
-          path: build/ios/iphoneos/*.ipa
-
-  create-release:
-    needs: [build-android, build-ios]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Download Android APK Artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: android-apk
-          path: ./artifacts/android
-
-      - name: Download iOS IPA Artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: ios-ipa
-          path: ./artifacts/ios
-
-      - name: Create Release
-        id: create_release
+      - name: Push to Releases
         uses: ncipollo/release-action@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          artifacts: "./artifacts/android/*,build/ios/iphoneos/app.ipa"
           tag: v1.0.${{ github.run_number }}
-          release_name: Release ${{ github.run_number }}
-          body: |
-            Release of the Android and iOS apps.
-          draft: false
-          prerelease: false
-
-      - name: Upload Android APK to Release
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./artifacts/android/*.apk
-          asset_name: app-release.apk
-          asset_content_type: application/vnd.android.package-archive
-
-      - name: Upload iOS IPA to Release
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./artifacts/ios/*.ipa
-          asset_name: app-release.ipa
-          asset_content_type: application/octet-stream
+          token: ${{ secrets.GITHUB_TOKEN }}
